Move points ratios to config

--- a/UniversityStore/resources/config.properties
+++ b/UniversityStore/resources/config.properties
@@ -1,3 +1,7 @@
 MEMBERFIRSTDISCOUNTCODE=MEMBER_FIRST
 DATAROOTFOLDER=data
 DISCOUNTCONVERSIONRATE=5
+#Every $10 spent = 1 point
+DollarToRoyalPointRate=0.1
+#Every 20 points = 1 dollar
+LoyalPointToDollarRate=0.05
